--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,1 +1,160 @@
 @import "tailwindcss";
+
+.video-wrapper {
+    margin: 0 !important;
+    overflow: hidden;
+    width: 100%;
+}
+
+.inside-wrapper {
+    padding-top: 0rem !important;
+    margin-top: 0rem !important;
+    overflow: hidden;
+}
+
+
+.video-wrapper {
+    height: 100vh;
+    width: 100vw;
+}
+
+.remote-video {
+    width: 100%;
+    height: 100%;
+}
+
+.screen-active {
+    position: absolute !important;
+    bottom: 0.5rem !important;
+    left: 1rem !important;
+    width: 200px;
+    height: 150px;
+    border-radius: 0.25rem;
+}
+
+.remote-video video {}
+
+.local-video video {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    /* Safari and Chrome */
+    -moz-transform: rotateY(180deg);
+    /* Firefox */
+}
+
+.screen-video {
+    width: 1280;
+    height: 720;
+}
+
+.local-video-container {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 1rem;
+    width: auto;
+}
+
+.control-area {
+    position: absolute;
+    bottom: 1rem;
+    width: 100%;
+    z-index: 99999 !important;
+}
+
+.streaming-control-area {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    width: auto;
+    z-index: 9999;
+}
+
+.btn-circle {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.btn-circle i {
+    position: relative;
+    top: -1px;
+}
+
+.btn-circle-sm {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    font-size: 0.9rem;
+}
+
+.btn-circle-lg {
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    font-size: 1.1rem;
+}
+
+.btn-circle-xl {
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 1.3rem;
+}
+
+.screen-preview-window {
+    width: 250px !important;
+}
+
+.screen-preview-window:hover {
+    width: 500px !important;
+}
+
+.stream-preview-window {
+    width: 300px !important;
+}
+
+.stream-preview-window:hover {
+    width: 500px !important;
+}
+
+/* Live indicator */
+
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+
+.lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+    animation-delay: -2s;
+}
+
+@keyframes lds-ripple {
+    0% {
+        top: 26px;
+        left: 26px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+
+    100% {
+        top: 0px;
+        left: 0px;
+        width: 62px;
+        height: 62px;
+        opacity: 0;
+    }
+}
