--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -19,10 +19,10 @@
     width: 100vw;
 }
 
-.remote-video {
-    width: 100%;
-    height: 100%;
-}
+// .remote-video {
+//     width: 100%;
+//     height: 100%;
+// }
 
 .screen-active {
     position: absolute !important;
